--- a/src/styles/GameScreen.css
+++ b/src/styles/GameScreen.css
@@ -7,6 +7,7 @@
   padding: 1rem 1rem 0;
   box-sizing: border-box;
   position: relative;
+  margin-top: 1rem;
 }
 
 
